added Asp .net Identity

--- a/WeatherApi/appsettings.json
+++ b/WeatherApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "WebApiDatabase": "server=localhost; database=weather_schema; user=root; password=admin"
+  },
   "AllowedHosts": "*"
 }
